Updated 'number to multiply' text field

--- a/udemy-03-multiples/Base.lproj/Main.storyboard
+++ b/udemy-03-multiples/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chalkboardBg" translatesAutoresizingMaskIntoConstraints="NO" id="1rM-ba-UMU">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Number to multiply?" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ADY-P8-94M">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number to multiply?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ADY-P8-94M">
                                 <rect key="frame" x="57" y="319" width="268" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="bZ4-2Q-hFw"/>
